<resources>
    <string name="app_name">WhazzApp</string>

    <string name="action_settings">Settings</string>

    <string name="action_search">Search</string>

    <string name="title_activity_login">Login to WhazzApp!</string>
    <string name="title_activity_signup">Sign Up!</string>
    <string name="menu_logout_label">Logout</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="login_label">Login!</string>
    <string name="hint_password">Password</string>
    <string name="login_button_label">LOGIN</string>
    <string name="plus_sign_label">+</string>
    <string name="signup_label">Sign Up!</string>
    <string name="hint_country_code">1</string>
    <string name="signup_button_verification">SEND VERIFICATION</string>
    <string name="error_verification">Please enter your country code and phone number.</string>
    <string name="error_missing_field">Error: Missing Field</string>
    <string name="error_missing_fields">Please enter your username and password.</string>
    <string name="signup_link_label">Don\'t have an account? Sign up!</string>
    <string name="signup_pin_number">PIN</string>
    <string name="error_pin_message">Invalid or missing PIN</string>
    <string name="error_pin_title">Error: Invalid</string>
    <string name="title_activity_signup_activity2">SignupActivity2</string>

    <string name="hello_world">Hello world!</string>
</resources>
